# info-chatbot

./: .Rprofile  .gitignore  DESCRIPTION  README.md  _quarto.yml  _team-agreement.md  main.py  proposal.qmd  pyproject.toml  report.qmd  requirements.txt  test_bank.md
.github/ISSUE_TEMPLATE/: peer-review.yml
docs/: report.html
knowledge/: application_info.md  degree_reqs.md  dti.md  mps_courses.md  mps_overview.md  mps_project.md
